--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=8.0.0",
-        "laravel/nova" : ">=4.0.0"
+        "php": "^8.0.0",
+        "laravel/nova" : "^4.0.0"
     },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "philperusse\\Filters\\": "src/"
